--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.15.3
   cloud_firestore: ^4.13.6
+  rxdart: ^0.27.7
+  intl: ^0.19.0
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
