--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   rxdart: ^0.27.7
   intl: ^0.19.0
   timezone: ^0.9.2
+  firebase_storage: ^11.5.6
+  image_picker: ^1.0.5
 
 dev_dependencies:
   flutter_test:
